# Invokation-Genesis

./: .env  .gitignore  API_TEST_GUIDE.md  DEVELOPMENT_PLAN.md  METABASE_SETUP.md  PROJECT_TASKS.md  QWEN.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  alembic.ini  api_test_commands.sh  api_test_page.html  app.py  app.py.bak  create_db_tables.py  create_test_accounts.py  dal.py  data_pipeline.py  database_container.md  database_importer.py  database_importer.py.bak  database_manager.py  db_init.py  docker-compose.yml  fetch_and_save_cards.py  fix_content_type.py  fix_notes.md  fix_unicode_storage.py  game_api_test_page.html  game_test_modular.html  h核心规则.md  import_card_data.py  init_db.py  initialize_db.py  integration_test.py  integration_test_final.py  integration_test_final.py.bak  main.py  migrate_database_structure.py  migrate_db.py  (+25 more)
.qwen/: PROJECT_SUMMARY.md  settings.json
alembic/: env.py
api/: api接入文档.md  auth.py  cards.py  characters_parse.py  deck_builder.py  fetcher.py  filters_integrated.py  local_game.py  parse_equipment.py  parse_events.py  parse_supports.py  standardized_cards.py  standardized_cards.py.bak  users.py  utis.py
card_data/: characters.json  equipments.json  events.json  supports.json
dev_tools/: generate_test_token.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  INDEX.md  TESTING.md  USER_GUIDE.md  dal_api_integration.md  dal_complete_guide.md  dal_components.md  dal_overview.md  dal_performance_optimization.md  dal_usage_examples.md
frontend/: API_REFERENCE.md  GAME_RULES.md  QWEN.md  package-lock.json  (+3 more)
(+121 files in other folders)
