[project]
name = "ys-qs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.2",
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0 ; sys_platform == 'linux' or sys_platform == 'darwin'",
    "pyjwt>=2.8.0",
    "flask-cors>=5.0.0",
    "flask-migrate>=4.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.11",
    "flask-jwt-extended>=4.7.1",
    "flask-socketio>=5.5.1",
    "pytest>=8.4.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
